Add release workflow documentation and create_release cursor command
New Features/Components:
- Add development/release_workflow.md (2097 lines): Comprehensive release workflow documentation defining the Release workflow as the highest-level unit of work. Enables autonomous, checkpoint-driven execution of multi-Feature Unit releases with automatic dependency resolution, parallelization planning, and cross-FU integration testing.
- Add agent-instructions/cursor-commands/create_release.md (511 lines): Cursor command for orchestrating multiple Feature Units into cohesive releases. Implements the Release workflow with dependency analysis, execution schedule generation, and cross-FU integration testing.

Configuration Changes:
- Add create_release to generic_commands in config/foundation-config.yaml
- Remove config/repo-adapters/neotoma.yaml: Repository-specific adapter configuration removed (moved to main repository)

Documentation Updates:
- Update agent-instructions/README.md: Add reference to new create_release command
- Update development/branch-strategy.md: Integration with release workflow
- Update development/pr-process.md: References to release workflow
- Update development/workflow.md: Release workflow integration
- Update conventions/documentation-standards.md: Formatting updates
- Update conventions/code-conventions.md: Minor updates
- Update conventions/naming-patterns.yaml: Configuration updates
- Update agent-instructions/cursor-rules/*.md: Rule documentation updates (downstream_doc_updates, instruction_documentation, readme_maintenance, security, worktree_env)
- Update security/*.md: Security documentation updates (credential-management, security-rules)
- Update security/pre-commit-audit.sh: Security audit script improvements
- Update scripts/sync-foundation.sh: Foundation sync script updates
- Update scripts/validate-setup.sh: Setup validation updates
- Update development/worktree-setup.sh: Worktree setup script updates
- Update CONTRIBUTING.md: Contribu

--- a/config/foundation-config.yaml
+++ b/config/foundation-config.yaml
@@ -245,6 +245,7 @@ agent_instructions:
     location: ".cursor/commands/"
     generic_commands:
       - commit
+      - create_release
     custom_commands: []  # Repo-specific commands
   constraints: []
     # Project-specific constraints
