--- a/config/foundation-config.yaml
+++ b/config/foundation-config.yaml
@@ -47,6 +47,31 @@ development:
       enabled: false
       patterns: []  # e.g., ["chat-*"]
   
+  # Pull workflow
+  pull:
+    auto_commit: true  # Automatically commit local changes before pull
+    conflict_strategy: "merge"  # "merge" | "rebase" | "abort"
+    run_setup_scripts: true  # Run setup scripts after pull
+    setup_scripts: []  # Custom list of scripts to run (empty = auto-detect)
+  
+  # Bug fix workflow
+  bug_fix:
+    enabled: false  # Enable bug fix workflow
+    error_classification:
+      enabled: false  # Enable if you have error classification system
+      classes:
+        - name: "Class 1"
+          description: "Implementation bug"
+          correction: "Patch code only"
+        - name: "Class 2"
+          description: "Spec bug"
+          correction: "Update spec first, then code"
+        - name: "Class 3"
+          description: "Architectural bug"
+          correction: "Update architecture docs first"
+    require_regression_test: true
+    test_commands: []  # Optional, repo-specific test commands (e.g., ["npm test"])
+  
   # Pull requests
   pull_requests:
     require_id_in_title: true
@@ -239,13 +264,26 @@ agent_instructions:
       - readme_maintenance
       - downstream_doc_updates
       - instruction_documentation
-    custom_rules: []  # Repo-specific rules (e.g., ["repo_doctrine", "feature_detection"])
+      - feature_unit_detection
+      - release_detection
+      - checkpoint_management
+      - post_build_testing
+      - bug_fix_detection
+    custom_rules: []  # Repo-specific rules
   cursor_commands:
     enabled: false
     location: ".cursor/commands/"
     generic_commands:
       - commit
+      - pull
       - create_release
+      - create_feature_unit
+      - run_feature_workflow
+      - create_prototype
+      - final_review
+      - fix_feature_bug
+      - analyze
+      - setup_symlinks
     custom_commands: []  # Repo-specific commands
   constraints: []
     # Project-specific constraints
@@ -292,17 +330,141 @@ strategy:
       enabled: false
       frequency: "weekly"  # or "bi-weekly", "monthly"
       min_participants_per_cycle: 2
+  
+  # Competitive and partnership analysis
+  competitive_analysis:
+    enabled: false
+    output_directory: "docs/private/competitive/"  # Where to save competitive analyses
+  partnership_analysis:
+    enabled: false
+    output_directory: "docs/private/partnerships/"  # Where to save partnership analyses
+  relevance_analysis:
+    enabled: false
+    output_directory: "docs/private/insights/"  # Where to save relevance analyses (for content/thought leadership)
+
+# Private documentation repository (optional)
+private_docs:
+  enabled: false  # Enable to automatically add private docs as submodule during installation
+  repo_url: null  # Private docs repository URL (e.g., "https://github.com/user/private-docs.git")
+                  # If null, uses PRIVATE_DOCS_REPO_URL environment variable
+  path: "docs/private"  # Submodule path in consuming repository
 
 # Release orchestration (optional)
 orchestration:
   release:
     enabled: false
+    directory: "docs/releases/"  # Base directory for releases
+    in_progress_subdir: "in_progress"
+    completed_subdir: "completed"
     execution_strategy: "sequential"  # or "multi_agent", "parallel"
     max_parallel_items: 3
+    
+    # Release files
+    integration_tests_file: "integration_tests.md"  # Integration tests filename
+    release_report_file: "release_report.md"  # Release report filename
+    status_file: "status.md"  # Status tracking filename
+    manifest_file: "manifest.yaml"  # Release manifest filename
+    testing_section_name: "Testing Guidance"  # Section name in release report
+    
+    # Agent spawning (for multi-agent execution)
     agent_spawning:
       enabled: false  # Requires Cursor Cloud API
       api_url: "${CURSOR_CLOUD_API_URL}"
       api_key: "${CURSOR_CLOUD_API_KEY}"
+
+# Feature Unit development workflow (optional)
+feature_units:
+  enabled: false
+  
+  # Directory structure
+  directory: "docs/feature_units/"  # Base directory for feature units
+  completed_subdir: "completed"     # Subdirectory for completed FUs
+  in_progress_subdir: "in_progress" # Subdirectory for in-progress FUs
+  
+  # ID format
+  id_pattern: "FU-YYYY-MM-NNN"  # Feature Unit ID format (e.g., FU-2025-01-001)
+  id_regex: "^FU-\\d{4}-\\d{2}-\\d{3}$"  # Validation regex
+  
+  # Manifest configuration
+  manifest_complexity: "simple"  # simple | extended
+  # simple: Core fields only (status, priority, dependencies, testing, observability)
+  # extended: Includes architecture fields (subsystems, schema_changes, api_changes, ui, state_machines)
+  
+  # Required spec sections (always required)
+  required_sections:
+    - "Overview"
+    - "Requirements"
+    - "Testing Strategy"
+    - "Observability"
+  
+  # Optional spec sections (configurable per repo)
+  optional_sections: []
+    # - "UX Requirements"  # Enable for UI-heavy projects
+    # - "Architecture Details"  # Enable for complex architectures
+    # - "Migration Plan"  # Enable for database-heavy projects
+  
+  # Product strategy tracking (optional but recommended)
+  product_strategy:
+    enabled: false  # Enable to track competitive positioning
+    track_defensible_differentiation: false
+    differentiation_types: []  # Define your differentiation types
+      # Examples:
+      # - "privacy-first"
+      # - "deterministic"
+      # - "cross-platform"
+      # - "open-source"
+      # - "offline-first"
+    track_user_value: true  # Always track user value (why users care)
+    track_competitive_positioning: false  # Track vs competitor comparison
+  
+  # Architecture tracking (extended manifest only)
+  architecture:
+    track_subsystems: false  # Track which architecture modules are affected
+    subsystems: []  # Define your architecture modules
+      # Examples:
+      # - "ingestion"
+      # - "schema"
+      # - "search"
+      # - "auth"
+    track_schema_changes: false  # Track database schema changes
+    track_api_changes: false  # Track API/endpoint changes
+    track_ui_changes: false  # Track UI component changes
+    track_state_machines: false  # Track state machine definitions
+  
+  # Dependency validation
+  dependencies:
+    validate_on_create: true  # Validate dependencies exist before creating FU
+    allow_partial_dependencies: true  # Allow depending on partial (in-progress) FUs
+    reject_missing_dependencies: true  # Reject if dependency doesn't exist
+  
+  # Testing requirements
+  testing:
+    require_unit_tests: true
+    require_integration_tests: true
+    require_e2e_tests: false  # Optional for non-UI features
+    require_observability: true  # At least one metric/log required
+    coverage_targets:
+      lines: 80
+      branches: 80
+      critical_paths: 100  # Critical code paths require 100% coverage
+  
+  # Checkpoint workflow
+  checkpoints:
+    checkpoint_0_spec_creation: true  # Always required
+    checkpoint_1_prototype_review: true  # Required for UI features
+    checkpoint_2_final_review: true  # Always required
+  
+  # Git workflow integration
+  git_workflow:
+    use_worktrees: false  # Whether to use git worktrees for isolation
+    worktree_path_pattern: "../{repo}-{feature_id}"
+    branch_prefix: "feature"  # Branch naming: feature/FU-XXX-description
+    require_pr: true  # Require PR for final review
+  
+  # Kill switch (defer criteria)
+  kill_switch:
+    enabled: true  # Track conditions for deferring/pausing FUs
+    check_on_execution: true  # Check conditions during execution
 
 # Project-specific extensions
 # Add custom configuration sections here
