Migrate cursor commands and rules from foundation_ prefix to direct names
- Remove foundation_ prefixed symlinks in .cursor/commands/ and .cursor/rules/
- Add direct command and rule files without prefix
- Update setup scripts and configuration
- Add new commands: setup_cursor_copies, sync_env_from_1password
- Update commit and setup_symlinks command documentation

--- a/config/foundation-config.yaml
+++ b/config/foundation-config.yaml
@@ -24,19 +24,19 @@ development:
     release_prefix: "release"
     naming_pattern: "{prefix}/{id}-{description}"  # or "{prefix}/{description}"
     require_id: true  # whether ID is required in branch names
-  
+
   # Workflow preferences
   workflow:
     use_worktrees: true
     worktree_base_path: "../{repo}-{branch}"
     env_copy_script: "scripts/copy-env-to-worktree.js"  # optional
-  
+
   # Commit format
   commit_format:
     require_id: true  # whether ID is required in commit messages
     require_references: false  # whether "References:" line is required
     pattern: "{id}: {description}"  # or custom pattern
-  
+
   # Commit workflow configuration
   commit:
     handle_nested_repos: false  # Enable nested repository handling
@@ -46,14 +46,14 @@ development:
     branch_renaming:
       enabled: false
       patterns: []  # e.g., ["chat-*"]
-  
+
   # Pull workflow
   pull:
     auto_commit: true  # Automatically commit local changes before pull
     conflict_strategy: "merge"  # "merge" | "rebase" | "abort"
     run_setup_scripts: true  # Run setup scripts after pull
     setup_scripts: []  # Custom list of scripts to run (empty = auto-detect)
-  
+
   # Bug fix workflow
   bug_fix:
     enabled: false  # Enable bug fix workflow
@@ -71,7 +71,7 @@ development:
           correction: "Update architecture docs first"
     require_regression_test: true
     test_commands: []  # Optional, repo-specific test commands (e.g., ["npm test"])
-  
+
   # Pull requests
   pull_requests:
     require_id_in_title: true
@@ -100,7 +100,7 @@ conventions:
       - "external"  # node_modules
       - "internal"  # from src/
       - "relative"  # ./ or ../
-  
+
   sql:
     tables: "snake_case"  # Always plural
     columns: "snake_case"
@@ -112,18 +112,30 @@ conventions:
       created: "created_at"
       updated: "updated_at"
       deleted: "deleted_at"
-  
+
   yaml:
     keys: "snake_case"
     indentation: 2
     use_quotes: "when_needed"  # or "always", "never"
     boolean_style: "lowercase"  # true/false
-  
+
   shell:
     constants: "UPPER_SNAKE_CASE"
     local_variables: "lowercase"
     functions: "snake_case"  # or "camelCase"
     scripts: "kebab-case.sh"
+
+  environment_variables:
+    # Environment variable naming standard
+    # All environment variables MUST use UPPER_SNAKE_CASE
+    # See foundation/conventions/naming_patterns.yaml for full specification
+    case: "UPPER_SNAKE_CASE"  # REQUIRED: All env vars must be uppercase
+    separator: "_"  # Use underscore to separate words
+    patterns:
+      service_purpose_type: "{SERVICE}_{PURPOSE}_{TYPE}"  # e.g., COINBASE_API_KEY
+      service_type: "{SERVICE}_{TYPE}"  # e.g., MINTED_EMAIL, BTC_PRIVATE_KEY
+    validation_pattern: "^[A-Z][A-Z0-9_]*$"  # Regex for UPPER_SNAKE_CASE
+    enforce_naming: true  # whether to validate env var names
 
 # Testing configuration
 testing:
@@ -175,7 +187,7 @@ validation:
       - "database_schema"
       - "validation_logic"
       - "testing"
-  
+
   doc_dependencies:
     enabled: false
     dependency_map_path: "docs/doc_dependencies.yaml"  # Optional, configure per repository
@@ -213,7 +225,7 @@ tooling:
     key_path: ".secrets/.key"
     algorithm: "aes-256-gcm"
     master_key_env: "SECRETS_MASTER_KEY"
-  
+
   env_management:
     enabled: true
     env_file_priority:
@@ -228,7 +240,18 @@ tooling:
       dev_prefix: "DEV_"
       prod_prefix: "PROD_"
       require_explicit_env: false  # whether to prevent generic variables
-  
+
+    # 1Password sync configuration
+    # Mappings are stored in data/env_var_mappings/env_var_mappings.parquet (accessed via MCP)
+    # Exclusions can be configured here (repo-wide) or in foundation-config.local.yaml (instance-specific)
+    onepassword_sync:
+      # Optional: Repo-wide exclusions (variables to exclude from preservation during sync)
+      # Instance-specific exclusions should go in foundation-config.local.yaml
+      default_exclusions: []
+        # Examples:
+        # - "DEPRECATED_VAR_NAME"
+        # - "OLD_API_KEY"
+
   agent_setup:
     enabled: false
     database:
@@ -240,7 +263,7 @@ tooling:
       #   install_command: "npx playwright install --with-deps chromium"
       # - name: "database_cli"
       #   verify_command: "npx supabase --version"
-  
+
   readme_generation:
     enabled: false
     source_documents: []
@@ -330,7 +353,7 @@ strategy:
       enabled: false
       frequency: "weekly"  # or "bi-weekly", "monthly"
       min_participants_per_cycle: 2
-  
+
   # Competitive and partnership analysis
   competitive_analysis:
     enabled: false
@@ -358,14 +381,14 @@ orchestration:
     completed_subdir: "completed"
     execution_strategy: "sequential"  # or "multi_agent", "parallel"
     max_parallel_items: 3
-    
+
     # Release files
     integration_tests_file: "integration_tests.md"  # Integration tests filename
     release_report_file: "release_report.md"  # Release report filename
     status_file: "status.md"  # Status tracking filename
     manifest_file: "manifest.yaml"  # Release manifest filename
     testing_section_name: "Testing Guidance"  # Section name in release report
-    
+
     # Agent spawning (for multi-agent execution)
     agent_spawning:
       enabled: false  # Requires Cursor Cloud API
@@ -375,34 +398,34 @@ orchestration:
 # Feature Unit development workflow (optional)
 feature_units:
   enabled: false
-  
+
   # Directory structure
   directory: "docs/feature_units/"  # Base directory for feature units
   completed_subdir: "completed"     # Subdirectory for completed FUs
   in_progress_subdir: "in_progress" # Subdirectory for in-progress FUs
-  
+
   # ID format
   id_pattern: "FU-YYYY-MM-NNN"  # Feature Unit ID format (e.g., FU-2025-01-001)
   id_regex: "^FU-\\d{4}-\\d{2}-\\d{3}$"  # Validation regex
-  
+
   # Manifest configuration
   manifest_complexity: "simple"  # simple | extended
   # simple: Core fields only (status, priority, dependencies, testing, observability)
   # extended: Includes architecture fields (subsystems, schema_changes, api_changes, ui, state_machines)
-  
+
   # Required spec sections (always required)
   required_sections:
     - "Overview"
     - "Requirements"
     - "Testing Strategy"
     - "Observability"
-  
+
   # Optional spec sections (configurable per repo)
   optional_sections: []
     # - "UX Requirements"  # Enable for UI-heavy projects
     # - "Architecture Details"  # Enable for complex architectures
     # - "Migration Plan"  # Enable for database-heavy projects
-  
+
   # Product strategy tracking (optional but recommended)
   product_strategy:
     enabled: false  # Enable to track competitive positioning
@@ -416,7 +439,7 @@ feature_units:
       # - "offline-first"
     track_user_value: true  # Always track user value (why users care)
     track_competitive_positioning: false  # Track vs competitor comparison
-  
+
   # Architecture tracking (extended manifest only)
   architecture:
     track_subsystems: false  # Track which architecture modules are affected
@@ -430,13 +453,13 @@ feature_units:
     track_api_changes: false  # Track API/endpoint changes
     track_ui_changes: false  # Track UI component changes
     track_state_machines: false  # Track state machine definitions
-  
+
   # Dependency validation
   dependencies:
     validate_on_create: true  # Validate dependencies exist before creating FU
     allow_partial_dependencies: true  # Allow depending on partial (in-progress) FUs
     reject_missing_dependencies: true  # Reject if dependency doesn't exist
-  
+
   # Testing requirements
   testing:
     require_unit_tests: true
@@ -447,20 +470,20 @@ feature_units:
       lines: 80
       branches: 80
       critical_paths: 100  # Critical code paths require 100% coverage
-  
+
   # Checkpoint workflow
   checkpoints:
     checkpoint_0_spec_creation: true  # Always required
     checkpoint_1_prototype_review: true  # Required for UI features
     checkpoint_2_final_review: true  # Always required
-  
+
   # Git workflow integration
   git_workflow:
     use_worktrees: false  # Whether to use git worktrees for isolation
     worktree_path_pattern: "../{repo}-{feature_id}"
     branch_prefix: "feature"  # Branch naming: feature/FU-XXX-description
     require_pr: true  # Require PR for final review
-  
+
   # Kill switch (defer criteria)
   kill_switch:
     enabled: true  # Track conditions for deferring/pausing FUs
